initial specs re-do

--- a/spec/importers/screening_list/dpl/results.yaml
+++ b/spec/importers/screening_list/dpl/results.yaml
@@ -11,13 +11,17 @@
     :code: DPL
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: SEMICONDUCTOR SYSTEMS INTL INC (SSI)
+  :name_nostop: 'SEMICONDUCTOR SYSTEMS INTL # (SSI)'
+  :rev_name: (SSI) INC INTL SYSTEMS SEMICONDUCTOR
+  :trim_name: SEMICONDUCTORSYSTEMSINTLINC(SSI)
+  :trim_rev_name: (SSI)INCINTLSYSTEMSSEMICONDUCTOR
   :addresses:
   - :address: BAGSVAERD HOVEDGADE 99 1 2880 BAGSVAERD
     :city: COPENHAGEN
     :state: 
     :country: DK
     :postal_code:
-  :phonetic_names: ["SEMICONDUCTOR SYSTEMS INTL., INC. (SSI)"]
 - :name: KAL TEK LABS
   :start_date: '1988-08-26'
   :end_date: '2008-08-26'
@@ -29,30 +33,38 @@
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: KAL TEK LABS
+  :name_nostop: KAL TEK LABS
+  :rev_name: LABS TEK KAL
+  :trim_name: KALTEKLABS
+  :trim_rev_name: LABSTEKKAL
   :addresses:
   - :address: '250 BONITA GLEN DRIVE, #3D'
     :city: CHULA VISTA
     :state: CA
     :country: US
     :postal_code:
-  :phonetic_names: ["KAL TEK LABS"]
 - :name: KATSUTA KEISUKE
   :start_date: '1993-08-02'
   :end_date: '2003-03-03'
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 58 F.R. 42719 8/11/93
   :id: 2b84aaafe727f7dba5fa3b8606579e2435cc6103
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: KATSUTA KEISUKE
+  :name_nostop: KATSUTA KEISUKE
+  :rev_name: KEISUKE KATSUTA
+  :trim_name: KATSUTAKEISUKE
+  :trim_rev_name: KEISUKEKATSUTA
   :addresses:
   - :address: 1-25-4 MINAMI-AZABU, MINATOKU
     :city: TOKYO
-    :state: 
+    :state:
     :country: JP
-    :postal_code: 
-  :phonetic_names: ["KATSUTA KEISUKE"]
+    :postal_code:
 - :name: KINTRACO
   :start_date: '1987-03-19'
   :end_date: '2007-03-19'
@@ -63,18 +75,22 @@
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: KINTRACO
+  :name_nostop: KINTRACO
+  :rev_name: KINTRACO
+  :trim_name: KINTRACO
+  :trim_rev_name: KINTRACO
   :addresses:
   - :address: BERENKOOG 29
     :city: ALKMAAR
-    :state: 
+    :state:
     :country: NL
     :postal_code: 1822 BH
-  :phonetic_names: ["KINTRACO"]
 - :name: ABELAIRAS, AMANCIO J.
   :start_date: '1995-06-05'
   :end_date: '2005-06-05'
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 60 F.R. 31140
   :id: dc622b95685f84dffd6e911648836a6801d53ae5
   :source: *1
@@ -86,72 +102,92 @@
     :state: FL
     :country: US
     :postal_code: '33144'
-  :phonetic_names: ["ABELAIRAS, AMANCIO J."]
+  :name_idx: ABELAIRAS AMANCIO J
+  :name_nostop: ABELAIRAS AMANCIO J
+  :rev_name: J AMANCIO ABELAIRAS
+  :trim_name: ABELAIRASAMANCIOJ
+  :trim_rev_name: JAMANCIOABELAIRAS
 - :name: ABRISHAMI, ELHAM
   :start_date: '1998-08-03'
   :end_date: '2007-08-29'
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 63 F.R. 43370 8/13/98
   :id: 432b23c1cc23bde1d0f4ccbdbb4d130232eda3f5
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: ABRISHAMI ELHAM
+  :name_nostop: ABRISHAMI ELHAM
+  :rev_name: ELHAM ABRISHAMI
+  :trim_name: ABRISHAMIELHAM
+  :trim_rev_name: ELHAMABRISHAMI
   :addresses:
   - :address: 271 MONSARRAT DRIVE
     :city: DUBLIN
     :state: OH
     :country: US
     :postal_code: '43017'
-  :phonetic_names: ["ABRISHAMI, ELHAM"]
 - :name: ACE, IAN
   :start_date: '1997-08-08'
   :end_date: '2017-08-08'
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 62 F.R. 43503 8/14/97
   :id: b8c54f53ba315aeadddeebe22f0d1ff7b7c245a7
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: ACE IAN
+  :name_nostop: ACE IAN
+  :rev_name: IAN ACE
+  :trim_name: ACEIAN
+  :trim_rev_name: IANACE
   :addresses:
   - :address: 4 MIMOSA WAY
     :city: PINELANDS
-    :state: 
+    :state:
     :country: ZA
     :postal_code:
-  :phonetic_names: ["ACE, IAN"]
 - :name: ADT ANALOG AND DIGITAL TECHNIK
   :start_date: '1981-09-10'
-  :end_date: 
+  :end_date:
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 46 F.R. 46154 9/17/81 and 46 F.R. 19290 3/30/81
   :id: 11e965e5acdd0938d286ed59923a655b3d6bd754
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: ADT ANALOG DIGITAL TECHNIK
+  :name_nostop: ADT ANALOG DIGITAL TECHNIK
+  :rev_name: TECHNIK DIGITAL ANALOG ADT
+  :trim_name: ADTANALOGDIGITALTECHNIK
+  :trim_rev_name: TECHNIKDIGITALANALOGADT
   :addresses:
   - :address: 8019 NIEDERSEEON, HOUSE 21
-    :city: 
-    :state: 
+    :city:
+    :state:
     :country: DE
     :postal_code:
-  :phonetic_names: ["ADT ANALOG AND DIGITAL TECHNIK"]
 - :name: AGNESE, ANDREE
   :start_date: '1985-07-11'
-  :end_date: 
+  :end_date:
   :standard_order: Y
-  :remarks: 
+  :remarks:
   :federal_register_notice: 50 F.R. 29244 7/18/85
   :id: 11590391080a515022a197f4be7597c0402fe568
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: AGNESE ANDREE
+  :name_nostop: AGNESE ANDREE
+  :rev_name: ANDREE AGNESE
+  :trim_name: AGNESEANDREE
+  :trim_rev_name: ANDREEAGNESE
   :addresses:
   - :address: 22 RUE DU 11 NOVEMBER 1918
     :city: PANTIN
-    :state: 
+    :state:
     :country: FR
     :postal_code:
-  :phonetic_names: ["AGNESE, ANDREE"]
