--- a/spec/importers/screening_list/isn/results.yaml
+++ b/spec/importers/screening_list/isn/results.yaml
@@ -11,7 +11,11 @@
   :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
-  :phonetic_names: ["7thÿof Tir"]
+  :name_idx: 7th of Tir
+  :name_nostop: 7th of Tir
+  :rev_name: Tir of 7th
+  :trim_name: 7thofTir
+  :trim_rev_name: Tirof7th
 - :name: Aerospace Industries Organization (AIO)
   :federal_register_notice: Vol. 70, No. 126, 07/01/05
   :start_date: '2005-06-28'
@@ -22,7 +26,11 @@
   :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
-  :phonetic_names: ["Aerospace Industries Organization (AIO)"]
+  :name_idx: Aerospace Industries Organization (AIO)
+  :name_nostop: 'Aerospace Industries # (AIO)'
+  :rev_name: (AIO) Organization Industries Aerospace
+  :trim_name: AerospaceIndustriesOrganization(AIO)
+  :trim_rev_name: (AIO)OrganizationIndustriesAerospace  
 - :name: Aerospace Logistics Services
   :federal_register_notice: Vol. 72, No. 77, 4/23/07
   :start_date: '2007-04-17'
@@ -34,7 +42,11 @@
   :programs:
   - INKSNA
   - ISNA
-  :phonetic_names: ["Aerospace Logistics Services"]
+  :name_idx: Aerospace Logistics Services
+  :name_nostop: Aerospace Logistics Services
+  :rev_name: Services Logistics Aerospace
+  :trim_name: AerospaceLogisticsServices
+  :trim_rev_name: ServicesLogisticsAerospace
 - :name: Ahmad Derakhshandeh
   :federal_register_notice: Vol. 72, No. 34, 02/21/07
   :start_date: '2007-01-09'
@@ -45,7 +57,6 @@
   :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
-  :phonetic_names: ["Ahmad Derakhshandeh"]
 - :name: Ahmad Vahid Dastjerdi
   :federal_register_notice: Vol. 72, No. 213, 11/05/07
   :start_date: '2007-10-25'
@@ -55,6 +66,9 @@
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
   :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
-  - E.O. 13328 - Iran
-  :phonetic_names: ["Ahmad Vahid Dastjerdi"]
-  
+  - E.O. 13328 - Iran  
+  :name_idx: Ahmad Derakhshandeh
+  :name_nostop: Ahmad Derakhshandeh
+  :rev_name: Derakhshandeh Ahmad
+  :trim_name: AhmadDerakhshandeh
+  :trim_rev_name: DerakhshandehAhmad
