--- a/spec/importers/screening_list/dtc/results.yaml
+++ b/spec/importers/screening_list/dtc/results.yaml
@@ -9,7 +9,13 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: 1857dfc050bc7adea46922f09996649de18495d7
-  :phonetic_names: ["Juwhan Yun"]
+  :name_idx: 'Juwhan Yun'
+  :name_nostop: 'Juwhan Yun'
+  :rev_name: 'Yun Juwhan'
+  :trim_name: 'JuwhanYun'
+  :trim_rev_name: 'YunJuwhan'
+  :source_list_url: 'http://www.pmddtc.state.gov/compliance/debar.html'
+  :id: '1857dfc050bc7adea46922f09996649de18495d7'}
 - :name: Dilligas Trading Co., Inc.
   :alt_names: []
   :start_date: '1991-12-13'
@@ -18,7 +24,14 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: afd9dbfe97d679d161eaed68203399296abf631c
-  :phonetic_names: [" Dilligas Trading Co., Inc."]
+  :phonetic_names: [' Dilligas Trading Co., Inc.']
+  :name_idx: 'Dilligas Trading Co Inc'
+  :name_nostop: 'Dilligas Trading # #'
+  :rev_name: 'Inc Co Trading Dilligas'
+  :trim_name: 'DilligasTradingCoInc'
+  :trim_rev_name: 'IncCoTradingDilligas'
+  :source_list_url: 'http://www.pmddtc.state.gov/compliance/debar.html'
+  :id: 'afd9dbfe97d679d161eaed68203399296abf631c'},  
 - :name: Brian Joseph Fleming
   :alt_names:
   - Brian Joseph McSulla
@@ -28,7 +41,9 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: ba449382749d0c16fd862d7b3da698fb65b5d7aa
-  :phonetic_names: ["Brian Joseph Fleming", "Brian Joseph McSulla"]
+  :trim_rev_alt_names: ['SmithBrian']
+  :source_list_url: 'http://www.pmddtc.state.gov/compliance/debar_admin.html'
+  :id: '5989fe6f23c0b7b07aade5e4782acbbceb57be71'  
 - :name: John Smith
   :alt_names:
   - Brian Smith
@@ -38,4 +53,15 @@
   :source_list_url: http://www.pmddtc.state.gov/compliance/debar_admin.html
   :source_information_url: http://www.pmddtc.state.gov/compliance/debar_intro.html
   :id: 5989fe6f23c0b7b07aade5e4782acbbceb57be71
-  :phonetic_names: ["John Smith", "Brian Smith"]
+  :name_idx: 'John Smith'
+  :name_nostop: 'John Smith'
+  :rev_name: 'Smith John'
+  :trim_name: 'JohnSmith'
+  :trim_rev_name: 'SmithJohn'
+  :alt_names_idx: ['Brian Smith']
+  :alt_names_nostop: 'Brian Smith'
+  :rev_alt_names: ['Smith Brian']
+  :trim_alt_names: ['BrianSmith']
+  :trim_rev_alt_names: ['SmithBrian']
+  :source_list_url: 'http://www.pmddtc.state.gov/compliance/debar_admin.html'
+  :id: '5989fe6f23c0b7b07aade5e4782acbbceb57be71'
