--- a/spec/importers/screening_list/el/results.yaml
+++ b/spec/importers/screening_list/el/results.yaml
@@ -26,7 +26,16 @@
     :full_name: Entity List (EL) - Bureau of Industry and Security
     :code: EL
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Fazal Rahim Farid", "Fazel Rahim Farid", "Farid", "Engineer Idris"]
+  :name_idx: Fazal Rahim Farid
+  :name_nostop: Fazal Rahim Farid
+  :rev_name: Farid Rahim Fazal
+  :trim_name: FazalRahimFarid
+  :trim_rev_name: FaridRahimFazal
+  :alt_names_idx: [Fazel Rahim Farid, Farid, Engineer Idris]
+  :alt_names_nostop: [Fazel Rahim Farid, Farid, Engineer Idris]
+  :rev_alt_names: [Farid Rahim Fazel, Farid, Idris Engineer]
+  :trim_alt_names: [FazelRahimFarid, Farid, EngineerIdris]
+  :trim_rev_alt_names: [FaridRahimFazel, Farid, IdrisEngineer]
 - :name: Fazel Khalil Construction Company
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -45,7 +54,11 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Fazel Khalil Construction Company"]
+  :name_idx: Fazel Khalil Construction Company
+  :name_nostop: 'Fazel Khalil Construction #'
+  :rev_name: Company Construction Khalil Fazel
+  :trim_name: FazelKhalilConstructionCompany
+  :trim_rev_name: CompanyConstructionKhalilFazel
 - :name: Zurmat Construction Company offices
   :federal_register_notice: 77 FR 25055
   :start_date: '2012-04-27'
@@ -94,7 +107,11 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Zurmat Construction Company offices"]
+  :name_idx: Zurmat Construction Company offices
+  :name_nostop: 'Zurmat Construction # offices'
+  :rev_name: offices Company Construction Zurmat
+  :trim_name: ZurmatConstructionCompanyoffices
+  :trim_rev_name: officesCompanyConstructionZurmat
 - :name: Murat Peker
   :federal_register_notice: '78 FR 75485 '
   :start_date: '2013-12-12'
@@ -112,7 +129,11 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Murat Peker"]
+  :name_idx: Murat Peker
+  :name_nostop: Murat Peker
+  :rev_name: Peker Murat
+  :trim_name: MuratPeker
+  :trim_rev_name: PekerMurat
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-21'
@@ -131,7 +152,16 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Qazi Abdallah", "Jawid, Said Jan Abd-al-Salam"]
+  :name_idx: Qazi Abdallah
+  :name_nostop: Qazi Abdallah
+  :rev_name: Abdallah Qazi
+  :trim_name: QaziAbdallah
+  :trim_rev_name: AbdallahQazi
+  :alt_names_idx: [Jawid Said Jan Abd-al-Salam]
+  :alt_names_nostop: [Jawid Said Jan Abd-al-Salam]
+  :rev_alt_names: [Abd-al-Salam Jan Said Jawid]
+  :trim_alt_names: [JawidSaidJanAbd-al-Salam]
+  :trim_rev_alt_names: [Abd-al-SalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 10001
   :start_date: '2011-11-21'
@@ -150,7 +180,16 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Qazi Abdallah", "Jawid, Said Jan Abd-al-Salam"]
+  :name_idx: Qazi Abdallah
+  :name_nostop: Qazi Abdallah
+  :rev_name: Abdallah Qazi
+  :trim_name: QaziAbdallah
+  :trim_rev_name: AbdallahQazi
+  :alt_names_idx: [Jawid Said Jan Abd-al-Salam]
+  :alt_names_nostop: [Jawid Said Jan Abd-al-Salam]
+  :rev_alt_names: [Abd-al-Salam Jan Said Jawid]
+  :trim_alt_names: [JawidSaidJanAbd-al-Salam]
+  :trim_rev_alt_names: [Abd-al-SalamJanSaidJawid]
 - :name: Qazi Abdallah
   :federal_register_notice: 76 FR 71867
   :start_date: '2011-11-22'
@@ -169,4 +208,13 @@
     :state: 
   :source: *1
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/entity-list
-  :phonetic_names: ["Qazi Abdallah", "Jawid, Said Jan Abd-al-Salam"]
+  :name_idx: Qazi Abdallah
+  :name_nostop: Qazi Abdallah
+  :rev_name: Abdallah Qazi
+  :trim_name: QaziAbdallah
+  :trim_rev_name: AbdallahQazi
+  :alt_names_idx: [Jawid Said Jan Abd-al-Salam]
+  :alt_names_nostop: [Jawid Said Jan Abd-al-Salam]
+  :rev_alt_names: [Abd-al-Salam Jan Said Jawid]
+  :trim_alt_names: [JawidSaidJanAbd-al-Salam]
+  :trim_rev_alt_names: [Abd-al-SalamJanSaidJawid]
