addition name work

--- a/spec/importers/screening_list/uvl/results.yaml
+++ b/spec/importers/screening_list/uvl/results.yaml
@@ -8,16 +8,19 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Room 2135, Jingxin Building A, No Dong San Huan North Road, Beijing
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: CN
   :alt_names: []
-  :name_idx: China National Plant Import/Export Co
-  :name_nostop: 'China National Plant Import/Export #'
-  :rev_name: Co Import/Export Plant National China
-  :trim_name: ChinaNationalPlantImport/ExportCo
-  :trim_rev_name: CoImport/ExportPlantNationalChina
+  :name_idx: China National Plant ImportExport Co
+  :name_no_common: China National Plant ImportExport
+  :rev_name: Co ImportExport Plant National China
+  :rev_no_common: ImportExport Plant National China
+  :trim_name: ChinaNationalPlantImportExportCo
+  :trim_name_no_common: ChinaNationalPlantImportExport
+  :trim_rev_name: CoImportExportPlantNationalChina
+  :trim_rev_name_no_common: ImportExportPlantNationalChina
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: *1
@@ -36,10 +39,13 @@
     :country: HK
   :alt_names: []
   :name_idx: Brilliance Technology Ltd
-  :name_nostop: 'Brilliance Technology #'
+  :name_no_common: Brilliance Technology
   :rev_name: Ltd Technology Brilliance
+  :rev_no_common: Technology Brilliance
   :trim_name: BrillianceTechnologyLtd
+  :trim_name_no_common: BrillianceTechnology
   :trim_rev_name: LtdTechnologyBrilliance
+  :trim_rev_name_no_common: TechnologyBrilliance}
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: *1
@@ -52,19 +58,21 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: Dynasense Photonics Co Limited
-  :name_nostop: 'Dynasense Photonics # #'
+ :name_idx: Dynasense Photonics Co Limited
+  :name_no_common: Dynasense Photonics
   :rev_name: Limited Co Photonics Dynasense
+  :rev_no_common: Photonics Dynasense
   :trim_name: DynasensePhotonicsCoLimited
+  :trim_name_no_common: DynasensePhotonics
   :trim_rev_name: LimitedCoPhotonicsDynasense
+  :trim_rev_name_no_common: PhotonicsDynasense}
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
-  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong
-      Kowloon
+  - :address: Flat D12, 11/F, King Yip Factory Bldg, 59 King Yip Street, Kwun Tong, Kowloon
     :city:
     :state:
     :postal_code:
@@ -76,11 +84,14 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: Hi-Shine Technology (HK) Limited
-  :name_nostop: 'Hi-Shine Technology (HK) #'
-  :rev_name: Limited (HK) Technology Hi-Shine
-  :trim_name: Hi-ShineTechnology(HK)Limited
-  :trim_rev_name: Limited(HK)TechnologyHi-Shine
+  :name_idx: HiShine Technology HK Limited
+  :name_no_common: HiShine Technology HK
+  :rev_name: Limited HK Technology HiShine
+  :rev_no_common: HK Technology HiShine
+  :trim_name: HiShineTechnologyHKLimited
+  :trim_name_no_common: HiShineTechnologyHK
+  :trim_rev_name: LimitedHKTechnologyHiShine
+  :trim_rev_name_no_common: HKTechnologyHiShine
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: *1
@@ -93,11 +104,14 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: Hong Kong Haimao Info-Tec Development Co Ltd
-  :name_nostop: 'Hong Kong Haimao Info-Tec Development # #'
-  :rev_name: Ltd Co Development Info-Tec Haimao Kong Hong
-  :trim_name: HongKongHaimaoInfo-TecDevelopmentCoLtd
-  :trim_rev_name: LtdCoDevelopmentInfo-TecHaimaoKongHong
+  :name_idx: Hong Kong Haimao InfoTec Development Co Ltd
+  :name_no_common: Hong Kong Haimao InfoTec Development
+  :rev_name: Ltd Co Development InfoTec Haimao Kong Hong
+  :rev_no_common: Development InfoTec Haimao Kong Hong
+  :trim_name: HongKongHaimaoInfoTecDevelopmentCoLtd
+  :trim_name_no_common: HongKongHaimaoInfoTecDevelopment
+  :trim_rev_name: LtdCoDevelopmentInfoTecHaimaoKongHong
+  :trim_rev_name_no_common: DevelopmentInfoTecHaimaoKongHong
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: *1
@@ -110,11 +124,14 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: Lianqi (HK) Electronics Co Ltd
-  :name_nostop: 'Lianqi (HK) Electronics # #'
-  :rev_name: Ltd Co Electronics (HK) Lianqi
-  :trim_name: Lianqi(HK)ElectronicsCoLtd
-  :trim_rev_name: LtdCoElectronics(HK)Lianqi
+  :name_idx: Lianqi HK Electronics Co Ltd
+  :name_no_common: Lianqi HK Electronics
+  :rev_name: Ltd Co Electronics HK Lianqi
+  :rev_no_common: Electronics HK Lianqi
+  :trim_name: LianqiHKElectronicsCoLtd
+  :trim_name_no_common: LianqiHKElectronics
+  :trim_rev_name: LtdCoElectronicsHKLianqi
+  :trim_rev_name_no_common: ElectronicsHKLianqi
 - :name: Lion Chip Electronics Ltd
   :id: f117b1dab0d802e5f6c3a02113f67f3f72893a6e
   :source: *1
@@ -128,10 +145,13 @@
     :country: HK
   :alt_names: []
   :name_idx: Lion Chip Electronics Ltd
-  :name_nostop: 'Lion Chip Electronics #'
-  :rev_name: Ltd Electronics Chip Lion
-  :trim_name: LionChipElectronicsLtd
+  :name_no_common: Lion Chip Electronics
+   :rev_name: Ltd Electronics Chip Lion
+  :rev_no_common: Electronics Chip Lion
+   :trim_name: LionChipElectronicsLtd
+  :trim_name_no_common: LionChipElectronics
   :trim_rev_name: LtdElectronicsChipLion
+  :trim_rev_name_no_common: ElectronicsChipLion
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
   :source: *1
@@ -150,10 +170,13 @@
     :country: RU
   :alt_names: []
   :name_idx: Security 2 Business Academy
-  :name_nostop: Security 2 Business Academy
+  :name_no_common: Security 2 Business Academy
   :rev_name: Academy Business 2 Security
+  :rev_no_common: Academy Business 2 Security
   :trim_name: Security2BusinessAcademy
+  :trim_name_no_common: Security2BusinessAcademy
   :trim_rev_name: AcademyBusiness2Security
+  :trim_rev_name_no_common: AcademyBusiness2Security
 - :name: S2BA
   :id: 8cc44eee211bbc678fa468cfa5d44065b4c5d749
   :source: *1
@@ -171,11 +194,14 @@
     :postal_code:
     :country: RU
   :alt_names: []
-  :name_idx: S2BA
-  :name_nostop: S2BA
-  :rev_name: S2BA
-  :trim_name: S2BA
+   :name_idx: S2BA
+  :name_no_common: S2BA
+   :rev_name: S2BA
+  :rev_no_common: S2BA
+   :trim_name: S2BA
+  :trim_name_no_common: S2BA
   :trim_rev_name: S2BA
+  :trim_rev_name_no_common: S2BA
 - :name: Academy of Business Security
   :id: b5f1189bc3a5d4a969a9980d946f30c9dd74ea84
   :source: *1
@@ -194,10 +220,13 @@
     :country: RU
   :alt_names: []
   :name_idx: Academy of Business Security
-  :name_nostop: Academy of Business Security
+  :name_no_common: Academy of Business Security
   :rev_name: Security Business of Academy
+  :rev_no_common: Security Business of Academy
   :trim_name: AcademyofBusinessSecurity
+  :trim_name_no_common: AcademyofBusinessSecurity
   :trim_rev_name: SecurityBusinessofAcademy
+  :trim_rev_name_no_common: SecurityBusinessofAcademy}
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: *1
@@ -205,62 +234,76 @@
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 30, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names: []
   :name_idx: T2BA
-  :name_nostop: T2BA
+  :name_no_common: T2BA
   :rev_name: T2BA
+  :rev_no_common: T2BA
   :trim_name: T2BA
+  :trim_name_no_common: T2BA
   :trim_rev_name: T2BA
-- :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
+  :trim_rev_name_no_common: T2BA- :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
   :id: 385c6ccf9a8683027c6a981a8467a1ee357a4ee2
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
   - :address: Deguninskaya Street 20, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   - :address: Novoslobodskaya Str. 24/29, Moscow, Russia
-    :city: 
-    :state: 
-    :postal_code: 
+    :city:
+    :state:
+    :postal_code:
     :country: RU
   :alt_names:
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
-  :name_idx: 
+  :name_idx:
    Training 2 Business Academy aka T2BA aka Academy of Business Training
-  :name_nostop: 
-   Training 2 Business Academy aka T2BA aka Academy of Business Training
-  :rev_name: 
-   Training Business of Academy aka T2BA aka Academy Business 2 Training
+  :name_no_common: Training 2 Business Academy aka T2BA aka Academy of Business Training
+  :rev_name: Training Business of Academy aka T2BA aka Academy Business 2 Training
+  :rev_no_common: Training Business of Academy aka T2BA aka Academy Business 2 Training
   :trim_name: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
-  :trim_rev_name: 
-   TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
-  :alt_names_idx: 
+  :trim_name_no_common: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
+  :trim_rev_name: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
+  :trim_rev_name_no_common: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
+  :alt_names_idx:
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
-  :alt_names_nostop: 
+  :alt_names_no_common:
   - Training 2 Business Academy
-  - T2BA
+  - T2BA  
   - Academy of Business Training
-  :rev_alt_names: 
+  :rev_alt_names:
+  - Academy Business 2 Training
+  -  T2BA
+  Training Business of Academy
+  :rev_alt_no_common:
   - Academy Business 2 Training
   - T2BA
-  - Training Business of Academy
-  :trim_alt_names: 
+  Training Business of Academy
+  :trim_alt_names:
   - Training2BusinessAcademy
   - T2BA
-  - AcademyofBusinessTraining
-  :trim_rev_alt_names: 
+  AcademyofBusinessTraining
+  :trim_alt_no_common:
+  - Training2BusinessAcademy
+  - T2BA
+  AcademyofBusinessTraining
+  :trim_rev_alt_names:
+  - AcademyBusiness2Training
+  - T2BA
+  TrainingBusinessofAcademy
+  :trim_rev_alt_no_common:
   - AcademyBusiness2Training
   - T2BA
   - TrainingBusinessofAcademy
