--- a/spec/importers/screening_list/dpl/results.yaml
+++ b/spec/importers/screening_list/dpl/results.yaml
@@ -7,21 +7,24 @@
   :federal_register_notice: 
   :id: 33002aa2bdc2b177712d2bfd6fa5f7f700e88d23
   :source: &1
-    :full_name: Denied Persons List (DPL) - Bureau of Industry and Security
-    :code: DPL
+   :full_name: Denied Persons List (DPL) - Bureau of Industry and Security
+   :code: DPL
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
-  :name_idx: SEMICONDUCTOR SYSTEMS INTL INC (SSI)
-  :name_nostop: 'SEMICONDUCTOR SYSTEMS INTL # (SSI)'
-  :rev_name: (SSI) INC INTL SYSTEMS SEMICONDUCTOR
-  :trim_name: SEMICONDUCTORSYSTEMSINTLINC(SSI)
-  :trim_rev_name: (SSI)INCINTLSYSTEMSSEMICONDUCTOR
+  :name_idx: SEMICONDUCTOR SYSTEMS INTL INC SSI
+  :name_no_common: SEMICONDUCTOR SYSTEMS INTL SSI
+  :rev_name: SSI INC INTL SYSTEMS SEMICONDUCTOR
+  :rev_no_common: SSI INTL SYSTEMS SEMICONDUCTOR
+  :trim_name: SEMICONDUCTORSYSTEMSINTLINCSSI
+  :trim_name_no_common: SEMICONDUCTORSYSTEMSINTLSSI
+  :trim_rev_name: SSIINCINTLSYSTEMSSEMICONDUCTOR
+  :trim_rev_name_no_common: SSIINTLSYSTEMSSEMICONDUCTOR
   :addresses:
   - :address: BAGSVAERD HOVEDGADE 99 1 2880 BAGSVAERD
-    :city: COPENHAGEN
-    :state: 
-    :country: DK
-    :postal_code:
+   :city: COPENHAGEN
+   :state: 
+   :country: DK
+   :postal_code:
 - :name: KAL TEK LABS
   :start_date: '1988-08-26'
   :end_date: '2008-08-26'
@@ -34,16 +37,19 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: KAL TEK LABS
-  :name_nostop: KAL TEK LABS
+  :name_no_common: KAL TEK LABS
   :rev_name: LABS TEK KAL
+  :rev_no_common: LABS TEK KAL
   :trim_name: KALTEKLABS
+  :trim_name_no_common: KALTEKLABS
   :trim_rev_name: LABSTEKKAL
+  :trim_rev_name_no_common: LABSTEKKAL
   :addresses:
   - :address: '250 BONITA GLEN DRIVE, #3D'
-    :city: CHULA VISTA
-    :state: CA
-    :country: US
-    :postal_code:
+   :city: CHULA VISTA
+   :state: CA
+   :country: US
+   :postal_code:
 - :name: KATSUTA KEISUKE
   :start_date: '1993-08-02'
   :end_date: '2003-03-03'
@@ -55,16 +61,19 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: KATSUTA KEISUKE
-  :name_nostop: KATSUTA KEISUKE
+  :name_no_common: KATSUTA KEISUKE
   :rev_name: KEISUKE KATSUTA
+  :rev_no_common: KEISUKE KATSUTA
   :trim_name: KATSUTAKEISUKE
+  :trim_name_no_common: KATSUTAKEISUKE
   :trim_rev_name: KEISUKEKATSUTA
+  :trim_rev_name_no_common: KEISUKEKATSUTA
   :addresses:
   - :address: 1-25-4 MINAMI-AZABU, MINATOKU
-    :city: TOKYO
-    :state:
-    :country: JP
-    :postal_code:
+   :city: TOKYO
+   :state:
+   :country: JP
+   :postal_code:
 - :name: KINTRACO
   :start_date: '1987-03-19'
   :end_date: '2007-03-19'
@@ -76,16 +85,18 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: KINTRACO
-  :name_nostop: KINTRACO
+  :name_no_common: KINTRACO
   :rev_name: KINTRACO
+  :rev_no_common: KINTRACO
   :trim_name: KINTRACO
+  :trim_name_no_common: KINTRACO
   :trim_rev_name: KINTRACO
-  :addresses:
+  :trim_rev_name_no_common: KINTRACO  :addresses:
   - :address: BERENKOOG 29
-    :city: ALKMAAR
-    :state:
-    :country: NL
-    :postal_code: 1822 BH
+   :city: ALKMAAR
+   :state:
+   :country: NL
+   :postal_code: 1822 BH
 - :name: ABELAIRAS, AMANCIO J.
   :start_date: '1995-06-05'
   :end_date: '2005-06-05'
@@ -96,17 +107,20 @@
   :source: *1
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
+  :name_idx: ABELAIRAS AMANCIO J
+  :name_no_common: ABELAIRAS AMANCIO J
+  :rev_name: J AMANCIO ABELAIRAS
+  :rev_no_common: J AMANCIO ABELAIRAS
+  :trim_name: ABELAIRASAMANCIOJ
+  :trim_name_no_common: ABELAIRASAMANCIOJ
+  :trim_rev_name: JAMANCIOABELAIRAS
+  :trim_rev_name_no_common: JAMANCIOABELAIRAS
   :addresses:
   - :address: 6486 S.W. 9 STREET
-    :city: MIAMI
-    :state: FL
-    :country: US
-    :postal_code: '33144'
-  :name_idx: ABELAIRAS AMANCIO J
-  :name_nostop: ABELAIRAS AMANCIO J
-  :rev_name: J AMANCIO ABELAIRAS
-  :trim_name: ABELAIRASAMANCIOJ
-  :trim_rev_name: JAMANCIOABELAIRAS
+   :city: MIAMI
+   :state: FL
+   :country: US
+   :postal_code: '33144'
 - :name: ABRISHAMI, ELHAM
   :start_date: '1998-08-03'
   :end_date: '2007-08-29'
@@ -118,16 +132,18 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: ABRISHAMI ELHAM
-  :name_nostop: ABRISHAMI ELHAM
+  :name_no_common: ABRISHAMI ELHAM
   :rev_name: ELHAM ABRISHAMI
+  :rev_no_common: ELHAM ABRISHAMI
   :trim_name: ABRISHAMIELHAM
+  :trim_name_no_common: ABRISHAMIELHAM
   :trim_rev_name: ELHAMABRISHAMI
-  :addresses:
+  :trim_rev_name_no_common: ELHAMABRISHAMI  :addresses:
   - :address: 271 MONSARRAT DRIVE
-    :city: DUBLIN
-    :state: OH
-    :country: US
-    :postal_code: '43017'
+   :city: DUBLIN
+   :state: OH
+   :country: US
+   :postal_code: '43017'
 - :name: ACE, IAN
   :start_date: '1997-08-08'
   :end_date: '2017-08-08'
@@ -139,16 +155,19 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: ACE IAN
-  :name_nostop: ACE IAN
+  :name_no_common: ACE IAN
   :rev_name: IAN ACE
+  :rev_no_common: IAN ACE
   :trim_name: ACEIAN
+  :trim_name_no_common: ACEIAN
   :trim_rev_name: IANACE
+  :trim_rev_name_no_common: IANACE
   :addresses:
   - :address: 4 MIMOSA WAY
-    :city: PINELANDS
-    :state:
-    :country: ZA
-    :postal_code:
+   :city: PINELANDS
+   :state:
+   :country: ZA
+   :postal_code:
 - :name: ADT ANALOG AND DIGITAL TECHNIK
   :start_date: '1981-09-10'
   :end_date:
@@ -160,16 +179,19 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: ADT ANALOG DIGITAL TECHNIK
-  :name_nostop: ADT ANALOG DIGITAL TECHNIK
+  :name_no_common: ADT ANALOG DIGITAL TECHNIK
   :rev_name: TECHNIK DIGITAL ANALOG ADT
+  :rev_no_common: TECHNIK DIGITAL ANALOG ADT
   :trim_name: ADTANALOGDIGITALTECHNIK
+  :trim_name_no_common: ADTANALOGDIGITALTECHNIK
   :trim_rev_name: TECHNIKDIGITALANALOGADT
+  :trim_rev_name_no_common: TECHNIKDIGITALANALOGADT
   :addresses:
   - :address: 8019 NIEDERSEEON, HOUSE 21
-    :city:
-    :state:
-    :country: DE
-    :postal_code:
+   :city:
+   :state:
+   :country: DE
+   :postal_code:
 - :name: AGNESE, ANDREE
   :start_date: '1985-07-11'
   :end_date:
@@ -181,13 +203,16 @@
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
   :name_idx: AGNESE ANDREE
-  :name_nostop: AGNESE ANDREE
+  :name_no_common: AGNESE ANDREE
   :rev_name: ANDREE AGNESE
+  :rev_no_common: ANDREE AGNESE
   :trim_name: AGNESEANDREE
+  :trim_name_no_common: AGNESEANDREE
   :trim_rev_name: ANDREEAGNESE
+  :trim_rev_name_no_common: ANDREEAGNESE
   :addresses:
   - :address: 22 RUE DU 11 NOVEMBER 1918
-    :city: PANTIN
-    :state:
-    :country: FR
-    :postal_code:
+   :city: PANTIN
+   :state:
+   :country: FR
+   :postal_code:
