--- a/spec/importers/screening_list/part561/results.yaml
+++ b/spec/importers/screening_list/part561/results.yaml
@@ -13,7 +13,7 @@
   :id: '15268'
   :source:
     :full_name: Part 561 List (561) - Treasury Department
-    :code: "561"
+    :code: '561'
   :source_list_url:
   :source_information_url: http://www.treasury.gov/resource-center/sanctions/programs/pages/iran.aspx#part561
   :name: BANK OF KUNLUN CO LTD
@@ -56,20 +56,34 @@
     :number: CKLB CN BJ
     :type: SWIFT/BIC
   :name_idx: BANK OF KUNLUN CO LTD
-  :name_nostop: 'BANK OF KUNLUN # #'
   :rev_name: LTD CO KUNLUN OF BANK
   :trim_name: BANKOFKUNLUNCOLTD
   :trim_rev_name: LTDCOKUNLUNOFBANK
+  :name_no_common: BANK OF KUNLUN
+  :rev_name_no_common: KUNLUN OF BANK
+  :trim_name_no_common: BANKOFKUNLUN
+  :trim_rev_name_no_common: KUNLUNOFBANK
   :alt_names_idx:
-   [KARAMAY URBAN CREDIT COOPERATIVES,
-    KARAMAY CITY COMMERCIAL BANK CO LTD]
-  :alt_names_nostop:
-   [KARAMAY URBAN CREDIT COOPERATIVES,
-   KARAMAY CITY COMMERCIAL BANK CO LTD]
+  - KARAMAY URBAN CREDIT COOPERATIVES
+  - KARAMAY CITY COMMERCIAL BANK CO LTD
   :rev_alt_names:
-   [COOPERATIVES CREDIT URBAN KARAMAY,
-    LTD CO BANK COMMERCIAL CITY KARAMAY]
+  - COOPERATIVES CREDIT URBAN KARAMAY
+  - LTD CO BANK COMMERCIAL CITY KARAMAY
   :trim_alt_names:
-   [KARAMAYURBANCREDITCOOPERATIVES, KARAMAYCITYCOMMERCIALBANKCOLTD]
+  - KARAMAYURBANCREDITCOOPERATIVES
+  - KARAMAYCITYCOMMERCIALBANKCOLTD
   :trim_rev_alt_names:
-   [COOPERATIVESCREDITURBANKARAMAY, LTDCOBANKCOMMERCIALCITYKARAMAY]
+  - COOPERATIVESCREDITURBANKARAMAY
+  - LTDCOBANKCOMMERCIALCITYKARAMAY
+  :alt_names_no_common:
+  - KARAMAY URBAN CREDIT COOPERATIVES
+  - KARAMAY CITY COMMERCIAL BANK
+  :rev_alt_no_common: 
+  - COOPERATIVES CREDIT URBAN KARAMAY
+  - BANK COMMERCIAL CITY KARAMAY
+  :trim_alt_no_common: 
+  - KARAMAYURBANCREDITCOOPERATIVES
+  - KARAMAYCITYCOMMERCIALBANK
+  :trim_rev_alt_no_common: 
+  - COOPERATIVESCREDITURBANKARAMAY
+  - BANKCOMMERCIALCITYKARAMAY
