--- a/spec/importers/screening_list/plc/results.yaml
+++ b/spec/importers/screening_list/plc/results.yaml
@@ -30,15 +30,13 @@
   :addresses: []
   :ids: []
   :name_idx: HANIYA Ismail Abdul Salah
-  :name_nostop: HANIYA Ismail Abdul Salah
   :rev_name: Salah Abdul Ismail HANIYA
   :trim_name: HANIYAIsmailAbdulSalah
   :trim_rev_name: SalahAbdulIsmailHANIYA
   :alt_names_idx: [HANIYA Ismail, HANIYYA Ismaeel]
-  :alt_names_nostop: [HANIYA Ismail, HANIYYA Ismaeel]
   :rev_alt_names: [Ismail HANIYA, Ismaeel HANIYYA]
   :trim_alt_names: [HANIYAIsmail, HANIYYAIsmaeel]
-  :trim_rev_alt_names: [IsmailHANIYA, IsmaeelHANIYYA  
+  :trim_rev_alt_names: [IsmailHANIYA, IsmaeelHANIYYA]
 - :entity_number: '9674'
   :title:
   :call_sign:
@@ -68,13 +66,10 @@
   :addresses: []
   :ids: []
   :name_idx: QFEISHEH Hatem
-  :name_nostop: QFEISHEH Hatem
   :rev_name: Hatem QFEISHEH
   :trim_name: QFEISHEHHatem
   :trim_rev_name: HatemQFEISHEH
   :alt_names_idx: 
-   [KAFEESHEH Hatem Rabah, QEFEISHA Hatem, ABU ANED Hadj Hatem]
-  :alt_names_nostop: 
    [KAFEESHEH Hatem Rabah, QEFEISHA Hatem, ABU ANED Hadj Hatem]
   :rev_alt_names: 
    [Rabah Hatem KAFEESHEH, Hatem QEFEISHA, Hatem Hadj ANED ABU]
@@ -114,12 +109,10 @@
     :address:
   :ids: []
   :name_idx: YAHIA Khaled Abed
-  :name_nostop: YAHIA Khaled Abed
   :rev_name: Abed Khaled YAHIA
   :trim_name: YAHIAKhaledAbed
   :trim_rev_name: AbedKhaledYAHIA
   :alt_names_idx: [YEHIA Khaled Said]
-  :alt_names_nostop: [YEHIA Khaled Said]
   :rev_alt_names: [Said Khaled YEHIA]
   :trim_alt_names: [YEHIAKhaledSaid]
   :trim_rev_alt_names: [SaidKhaledYEHIA]  
@@ -152,13 +145,10 @@
   :addresses: []
   :ids: []
   :name_idx: SALEH Jamal
-  :name_nostop: SALEH Jamal
   :rev_name: Jamal SALEH
   :trim_name: SALEHJamal
   :trim_rev_name: JamalSALEH
   :alt_names_idx: [NASSER Jamal Talab Mohammad Saleh, SALEH Jamal Talab]
-  :alt_names_nostop: 
-   [NASSER Jamal Talab Mohammad Saleh, SALEH Jamal Talab]
   :rev_alt_names: [Saleh Mohammad Talab Jamal NASSER, Talab Jamal SALEH]
   :trim_alt_names: [NASSERJamalTalabMohammadSaleh, SALEHJamalTalab]
   :trim_rev_alt_names: [SalehMohammadTalabJamalNASSER, TalabJamalSALEH]  
@@ -189,12 +179,10 @@
   :addresses: []
   :ids: []
   :name_idx: SHIHAB Mohammed
-  :name_nostop: SHIHAB Mohammed
   :rev_name: Mohammed SHIHAB
   :trim_name: SHIHABMohammed
   :trim_rev_name: MohammedSHIHAB
   :alt_names_idx: [SHEHAB Mohamed Abed Hadi Rahman]
-  :alt_names_nostop: [SHEHAB Mohamed Abed Hadi Rahman]
   :rev_alt_names: [Rahman Hadi Abed Mohamed SHEHAB]
   :trim_alt_names: [SHEHABMohamedAbedHadiRahman]
   :trim_rev_alt_names: [RahmanHadiAbedMohamedSHEHAB]  
@@ -223,7 +211,6 @@
   :addresses: []
   :ids: []
   :name_idx: JARRAR Khaledah
-  :name_nostop: JARRAR Khaledah
   :rev_name: Khaledah JARRAR
   :trim_name: JARRARKhaledah
   :trim_rev_name: KhaledahJARRAR  
