--- a/spec/importers/screening_list/uvl/results.yaml
+++ b/spec/importers/screening_list/uvl/results.yaml
@@ -13,14 +13,14 @@
     :postal_code:
     :country: CN
   :alt_names: []
-  :name_idx: China National Plant ImportExport Co
-  :name_no_common: China National Plant ImportExport
-  :rev_name: Co ImportExport Plant National China
-  :rev_no_common: ImportExport Plant National China
+  :name_idx: China National Plant Import Export Co
+  :rev_name: Co Export Import Plant National China
   :trim_name: ChinaNationalPlantImportExportCo
+  :trim_rev_name: CoExportImportPlantNationalChina
+  :name_no_common: China National Plant Import Export
+  :rev_name_no_common: Export Import Plant National China
   :trim_name_no_common: ChinaNationalPlantImportExport
-  :trim_rev_name: CoImportExportPlantNationalChina
-  :trim_rev_name_no_common: ImportExportPlantNationalChina
+  :trim_rev_name_no_common: ExportImportPlantNationalChina
 - :name: Brilliance Technology Ltd
   :id: cc91dc115ff25e9f2e3cab1b9d8adf75f5956982
   :source: *1
@@ -39,33 +39,33 @@
     :country: HK
   :alt_names: []
   :name_idx: Brilliance Technology Ltd
-  :name_no_common: Brilliance Technology
   :rev_name: Ltd Technology Brilliance
-  :rev_no_common: Technology Brilliance
   :trim_name: BrillianceTechnologyLtd
-  :trim_name_no_common: BrillianceTechnology
   :trim_rev_name: LtdTechnologyBrilliance
-  :trim_rev_name_no_common: TechnologyBrilliance}
+  :name_no_common: Brilliance Technology
+  :rev_name_no_common: Technology Brilliance
+  :trim_name_no_common: BrillianceTechnology
+  :trim_rev_name_no_common: TechnologyBrilliance
 - :name: Dynasense Photonics Co., Limited
   :id: 91b38427499bf36988a61096f665301b890c9ec2
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/unverified-list
   :addresses:
-  - :address: Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai
+  - :address: "Unit 2209, 22/F, Wu Chung House, 213 Queen's Road East, Wanchai"
     :city:
     :state:
     :postal_code:
     :country: HK
   :alt_names: []
- :name_idx: Dynasense Photonics Co Limited
-  :name_no_common: Dynasense Photonics
+  :name_idx: Dynasense Photonics Co Limited
   :rev_name: Limited Co Photonics Dynasense
-  :rev_no_common: Photonics Dynasense
   :trim_name: DynasensePhotonicsCoLimited
-  :trim_name_no_common: DynasensePhotonics
   :trim_rev_name: LimitedCoPhotonicsDynasense
-  :trim_rev_name_no_common: PhotonicsDynasense}
+  :name_no_common: Dynasense Photonics
+  :rev_name_no_common: Photonics Dynasense
+  :trim_name_no_common: DynasensePhotonics
+  :trim_rev_name_no_common: PhotonicsDynasense
 - :name: Hi-Shine Technology (HK) Limited
   :id: 6e18b2585a002248ecb071d5fa8b26cdfd2f4144
   :source: *1
@@ -84,14 +84,14 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: HiShine Technology HK Limited
-  :name_no_common: HiShine Technology HK
-  :rev_name: Limited HK Technology HiShine
-  :rev_no_common: HK Technology HiShine
+  :name_idx: Hi Shine Technology HK Limited
+  :rev_name: Limited HK Technology Shine Hi
   :trim_name: HiShineTechnologyHKLimited
+  :trim_rev_name: LimitedHKTechnologyShineHi
+  :name_no_common: Hi Shine Technology HK
+  :rev_name_no_common: HK Technology Shine Hi
   :trim_name_no_common: HiShineTechnologyHK
-  :trim_rev_name: LimitedHKTechnologyHiShine
-  :trim_rev_name_no_common: HKTechnologyHiShine
+  :trim_rev_name_no_common: HKTechnologyShineHi
 - :name: Hong Kong Haimao Info-Tec Development Co Ltd
   :id: b7b7b4366f4441a70c163fe63706375ac2d4d520
   :source: *1
@@ -104,14 +104,14 @@
     :postal_code:
     :country: HK
   :alt_names: []
-  :name_idx: Hong Kong Haimao InfoTec Development Co Ltd
-  :name_no_common: Hong Kong Haimao InfoTec Development
-  :rev_name: Ltd Co Development InfoTec Haimao Kong Hong
-  :rev_no_common: Development InfoTec Haimao Kong Hong
+  :name_idx: Hong Kong Haimao Info Tec Development Co Ltd
+  :rev_name: Ltd Co Development Tec Info Haimao Kong Hong
   :trim_name: HongKongHaimaoInfoTecDevelopmentCoLtd
+  :trim_rev_name: LtdCoDevelopmentTecInfoHaimaoKongHong
+  :name_no_common: Hong Kong Haimao Info Tec Development
+  :rev_name_no_common: Development Tec Info Haimao Kong Hong
   :trim_name_no_common: HongKongHaimaoInfoTecDevelopment
-  :trim_rev_name: LtdCoDevelopmentInfoTecHaimaoKongHong
-  :trim_rev_name_no_common: DevelopmentInfoTecHaimaoKongHong
+  :trim_rev_name_no_common: DevelopmentTecInfoHaimaoKongHong
 - :name: Lianqi (HK) Electronics Co Ltd
   :id: 93d5f755bf946ab838126ffa4cee213d6e55e806
   :source: *1
@@ -125,12 +125,12 @@
     :country: HK
   :alt_names: []
   :name_idx: Lianqi HK Electronics Co Ltd
-  :name_no_common: Lianqi HK Electronics
   :rev_name: Ltd Co Electronics HK Lianqi
-  :rev_no_common: Electronics HK Lianqi
   :trim_name: LianqiHKElectronicsCoLtd
-  :trim_name_no_common: LianqiHKElectronics
   :trim_rev_name: LtdCoElectronicsHKLianqi
+  :name_no_common: Lianqi HK Electronics
+  :rev_name_no_common: Electronics HK Lianqi
+  :trim_name_no_common: LianqiHKElectronics
   :trim_rev_name_no_common: ElectronicsHKLianqi
 - :name: Lion Chip Electronics Ltd
   :id: f117b1dab0d802e5f6c3a02113f67f3f72893a6e
@@ -145,12 +145,12 @@
     :country: HK
   :alt_names: []
   :name_idx: Lion Chip Electronics Ltd
-  :name_no_common: Lion Chip Electronics
-   :rev_name: Ltd Electronics Chip Lion
-  :rev_no_common: Electronics Chip Lion
-   :trim_name: LionChipElectronicsLtd
-  :trim_name_no_common: LionChipElectronics
+  :rev_name: Ltd Electronics Chip Lion
+  :trim_name: LionChipElectronicsLtd
   :trim_rev_name: LtdElectronicsChipLion
+  :name_no_common: Lion Chip Electronics
+  :rev_name_no_common: Electronics Chip Lion
+  :trim_name_no_common: LionChipElectronics
   :trim_rev_name_no_common: ElectronicsChipLion
 - :name: Security 2 Business Academy
   :id: 5b5a164dd0e4ca3acb6397dbeb2d5713c4f13f90
@@ -170,13 +170,9 @@
     :country: RU
   :alt_names: []
   :name_idx: Security 2 Business Academy
-  :name_no_common: Security 2 Business Academy
   :rev_name: Academy Business 2 Security
-  :rev_no_common: Academy Business 2 Security
   :trim_name: Security2BusinessAcademy
-  :trim_name_no_common: Security2BusinessAcademy
   :trim_rev_name: AcademyBusiness2Security
-  :trim_rev_name_no_common: AcademyBusiness2Security
 - :name: S2BA
   :id: 8cc44eee211bbc678fa468cfa5d44065b4c5d749
   :source: *1
@@ -194,14 +190,10 @@
     :postal_code:
     :country: RU
   :alt_names: []
-   :name_idx: S2BA
-  :name_no_common: S2BA
-   :rev_name: S2BA
-  :rev_no_common: S2BA
-   :trim_name: S2BA
-  :trim_name_no_common: S2BA
+  :name_idx: S2BA
+  :rev_name: S2BA
+  :trim_name: S2BA
   :trim_rev_name: S2BA
-  :trim_rev_name_no_common: S2BA
 - :name: Academy of Business Security
   :id: b5f1189bc3a5d4a969a9980d946f30c9dd74ea84
   :source: *1
@@ -220,13 +212,9 @@
     :country: RU
   :alt_names: []
   :name_idx: Academy of Business Security
-  :name_no_common: Academy of Business Security
   :rev_name: Security Business of Academy
-  :rev_no_common: Security Business of Academy
   :trim_name: AcademyofBusinessSecurity
-  :trim_name_no_common: AcademyofBusinessSecurity
   :trim_rev_name: SecurityBusinessofAcademy
-  :trim_rev_name_no_common: SecurityBusinessofAcademy}
 - :name: T2BA
   :id: c46ba5ffd6da15f8e524b58f59123894bb63e2f8
   :source: *1
@@ -240,13 +228,10 @@
     :country: RU
   :alt_names: []
   :name_idx: T2BA
-  :name_no_common: T2BA
   :rev_name: T2BA
-  :rev_no_common: T2BA
   :trim_name: T2BA
-  :trim_name_no_common: T2BA
   :trim_rev_name: T2BA
-  :trim_rev_name_no_common: T2BA- :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
+- :name: Training 2 Business Academy, a.k.a. T2BA, a.k.a. Academy of Business Training
   :id: 385c6ccf9a8683027c6a981a8467a1ee357a4ee2
   :source: *1
   :source_list_url: http://www.bis.doc.gov/enforcement/unverifiedlist/unverified_parties.html
@@ -267,43 +252,23 @@
   - T2BA
   - Academy of Business Training
   :name_idx:
-   Training 2 Business Academy aka T2BA aka Academy of Business Training
-  :name_no_common: Training 2 Business Academy aka T2BA aka Academy of Business Training
-  :rev_name: Training Business of Academy aka T2BA aka Academy Business 2 Training
-  :rev_no_common: Training Business of Academy aka T2BA aka Academy Business 2 Training
+   Training 2 Business Academy a k a T2BA a k a Academy of Business Training
+  :rev_name: Training Business of Academy a k a T2BA a k a Academy Business 2 Training
   :trim_name: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
-  :trim_name_no_common: Training2BusinessAcademyakaT2BAakaAcademyofBusinessTraining
   :trim_rev_name: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
-  :trim_rev_name_no_common: TrainingBusinessofAcademyakaT2BAakaAcademyBusiness2Training
   :alt_names_idx:
   - Training 2 Business Academy
   - T2BA
   - Academy of Business Training
-  :alt_names_no_common:
-  - Training 2 Business Academy
-  - T2BA  
-  - Academy of Business Training
   :rev_alt_names:
   - Academy Business 2 Training
-  -  T2BA
-  Training Business of Academy
-  :rev_alt_no_common:
-  - Academy Business 2 Training
   - T2BA
-  Training Business of Academy
+  - Training Business of Academy
   :trim_alt_names:
   - Training2BusinessAcademy
   - T2BA
-  AcademyofBusinessTraining
-  :trim_alt_no_common:
-  - Training2BusinessAcademy
-  - T2BA
-  AcademyofBusinessTraining
+  - AcademyofBusinessTraining
   :trim_rev_alt_names:
-  - AcademyBusiness2Training
-  - T2BA
-  TrainingBusinessofAcademy
-  :trim_rev_alt_no_common:
   - AcademyBusiness2Training
   - T2BA
   - TrainingBusinessofAcademy
